fix so that content is not squished to the left on FF3 and Opera;

--- a/modules/enterprise/gui/portal-war/src/main/webapp/css/layout.css
+++ b/modules/enterprise/gui/portal-war/src/main/webapp/css/layout.css
@@ -75,6 +75,7 @@
 	padding: 0px;
 	border: 0px;
 	height: 100%;
+	width: 100%;
 	z-index: -1;
 	}
 
