--- a/modules/enterprise/gui/portal-war/src/main/webapp/css/leftMenu.css
+++ b/modules/enterprise/gui/portal-war/src/main/webapp/css/leftMenu.css
@@ -1,4 +1,11 @@
-body { background-color: white; margin: 0px; padding: 0px; }
+body { 
+    background-color: white;
+    font: 11px Helvetica, Arial, sans-serif;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    width: 100%;
+}
 
 
 /* LEFT MENU -------------------------------------------*/
@@ -76,11 +83,3 @@ body { background-color: white; margin: 0px; padding: 0px; }
 #LeftMenu ul li ul li a:hover {
   text-decoration: underline;
 }
-
-
-
-/* this color is now just at the bottom */
-div.brandBackground #LeftMenu { background: #B70000; }
-
-
-body { font: 11px Helvetica, Arial, sans-serif; }
